@@ -1,3 +1,8 @@
+2005-01-08  Marcus Meissner  <marcus@jet.franken.de>
+
+	* library.c: Send owner name with \0, or we get
+	  it back corrupted.
+
 2005-01-02  Marcus Meissner  <marcus@jet.franken.de>
 
 	* library.c: Added Canon FlashMode property.
